--- a/package.json
+++ b/package.json
@@ -36,13 +36,14 @@
   },
   "homepage": "https://github.com/thiagoadriano/estudo-js-tdd#readme",
   "devDependencies": {
-    "babel-loader": "^7.1.5",
+    "babel-cli": "^6.24.1",
+    "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.3.2",
     "babel-register": "^6.24.0",
     "chai": "^3.5.0",
+    "coveralls": "^2.13.0",
     "eslint": "^3.7.1",
     "eslint-config-airbnb": "^12.0.0",
-    "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.0.1",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.4.1",
@@ -50,12 +51,9 @@
     "mocha": "^3.2.0",
     "node-fetch": "^1.6.3",
     "nyc": "^10.2.0",
-    "sinon": "^2.1.0",
-    "sinon-chai": "^2.9.0",
-    "sinon-stub-promise": "^4.0.0",
+    "rimraf": "^2.6.1",
+    "sinon": "^6.1.3",
+    "sinon-chai": "^3.2.0",
     "webpack": "^2.4.1"
-  },
-  "dependencies": {
-    "babel": "^6.23.0"
   }
 }
